log/build_2023-09-25_15-58-13/my_py_pkg/stdout_stderr.log
running egg_info
writing ../../build/my_py_pkg/my_py_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/my_py_pkg/my_py_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/my_py_pkg/my_py_pkg.egg-info/entry_points.txt
writing requirements to ../../build/my_py_pkg/my_py_pkg.egg-info/requires.txt
writing top-level names to ../../build/my_py_pkg/my_py_pkg.egg-info/top_level.txt
reading manifest file '../../build/my_py_pkg/my_py_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/my_py_pkg/my_py_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying my_py_pkg/my_first_node.py -> /home/jeffh/ros2_ws/build/my_py_pkg/build/lib/my_py_pkg
running install
running install_lib
copying /home/jeffh/ros2_ws/build/my_py_pkg/build/lib/my_py_pkg/my_first_node.py -> /home/jeffh/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg
byte-compiling /home/jeffh/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/my_first_node.py to my_first_node.cpython-310.pyc
  File "/home/jeffh/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/my_first_node.py", line 15
    self.get_logger().info("Hello " str(self.counter_))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

running install_data
running install_egg_info
removing '/home/jeffh/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/my_py_pkg/my_py_pkg.egg-info to /home/jeffh/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing py_node script to /home/jeffh/ros2_ws/install/my_py_pkg/lib/my_py_pkg
writing list of installed files to '/home/jeffh/ros2_ws/build/my_py_pkg/install.log'
